third_party/move/move-compiler-v2/tests/more-v1/parser/let_binding_missing_fields.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/let_binding_missing_fields.move:6:26
  │
6 │         let Generic<u64> = g; // Test a type name with no field bindings
  │                          ^
  │                          │
  │                          Unexpected '='
  │                          Expected '{'
